Fixed responsiveness on smaller screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html {
 body {
   padding-left: 2rem;
   padding-right: 2rem;
-  max-width: 1280px;
+  max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -45,7 +45,7 @@ header {
 
 header h1 {
   font-family: AustralisProBoldItalic;
-  font-size: 32pt;
+  font-size: 28pt;
   color: #404653;
 }
 
@@ -54,7 +54,7 @@ nav {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  font-size: 24pt;
+  font-size: 20pt;
   text-align: center;
 }
 
